--- a/quemSomos.html
+++ b/quemSomos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quem Somos</title>
-    <link rel="stylesheet" href="CSS/styleAll.css">
+    <link rel="stylesheet" href="css/styleAll.css">
     <link rel="stylesheet" href="css/styleQuemSomos.css">
 </head>
 
