--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -12,7 +12,7 @@
 <body>
 
     <main>
-        <div class="login-form">
+        <div class="rowdies-bold login-form">
             <h2>Login</h2>
             <form action="#" method="post">
                 <label for="email">E-mail:</label>
@@ -20,8 +20,8 @@
                 <label for="password">Senha:</label>
                 <input type="password" id="password" name="password" required>
                 <div class="button-container">
-                    <button type="submit" class="login-button">Logar</button>
-                    <button type="button" class="register-button">Cadastrar</button>
+                    <input type="submit" value="Logar" class="rowdies-bold login-button">
+                    <input type="submit" value="Cadastrar" class="rowdies-bold register-button">
                 </div>
             </form>
         </div>
